# SNS-MPC

./: .gitignore  README.md  environment.yaml  pyproject.toml  requirements.txt  run_deployment_sim.py  run_evaluation.py  run_training.py  train_actuator_net.py
Common/: __init__.py  base_data.py  logger.py  nn_model.py  runtime_paths.py  utils.py
Common/Go2_dog/: __init__.py  commands.py  costs.py  data_containers.py  env_randomization.py  initializations.py  mj_data_containers.py
Configs/Go2_dog/: deploy_lipschitz_mppi.yaml  deploy_lipschitz_spline_shooter.yaml  evaluate_mppi.yaml  evaluate_spline_shooter.yaml  train.yaml
Deploy_simulation/: __init__.py  base_deploy.py
Deploy_simulation/Go2_dog/: deploy.py  deployment_collector.py  eval.py
Mj_models/Go2_dog/: go2_pd.xml  go2_torque.xml  go2_torque_test.xml  scene_pd.xml  scene_torque.xml  scene_torque_test.xml  terrain_gen.py
Mj_models/Go2_dog/assets/: mounts_test.mtl
Policies/: __init__.py  base_policy.py  data_collection_policy.py  deploy_policy.py  mppi_policy.py  spline_shooter_policy.py
Trained_models/Primary/Ckpt/Lipschitz_2025-07-14_15-48-44/: ckpt_Lipschitz_MPPI_Policy_2025-07-14_15-49-01_actions.dill  ckpt_Lipschitz_MPPI_Policy_2025-07-14_15-49-01_observations.dill  ckpt_Lipschitz_MPPI_Policy_2025-07-14_15-49-01_states.dill
Training/: __init__.py  base_data_collector.py  base_data_wrangler.py  data_loader.py  trainer.py
Training/Go2_dog/: data_collector.py  nn_data.py  train.py
actuator_logs/: actuator_network_200hz_params.npz  actuator_network_params.npz
